--- a/GIROHOME/css/style.css
+++ b/GIROHOME/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .logo {
     width: 4rem;
     height: 4rem;
@@ -7,23 +9,24 @@
 
 .navback {
     background-color: #000000; 
-    color: #FFF !important;
-    text-align: center !important;
-    font-family: Montserrat !important;
-    font-style: normal !important;
-    font-weight: 700 !important;
-    line-height: normal !important;
-    min-width: 100px !important;
+    color: #FFF;
+    text-align: center;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    min-width: 100px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15); 
 }
 
 .navback .navbar-nav .nav-link {
-    color: #fff !important;
-    text-align: center !important;
-    font-family: Montserrat !important;
-    font-size: clamp(0.9rem, 2vw, 1.1rem) !important;
-    font-style: normal !important;
-    font-weight: 700 !important;
-    line-height: normal !important;
+    color: #fff;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
 .navback .navbar-nav .nav-link:hover {
@@ -32,76 +35,92 @@
 
 .navback .navbar-brand,
 .navback .btn {
-  color: #fff !important;
-  text-align: center !important;
-    font-family: Montserrat !important;
-    font-size: clamp(0.9rem, 2vw, 1.1rem) !important;
-    font-style: normal !important;
-    font-weight: 700 !important;
-    line-height: normal !important;
-    margin-right: 0.3rem !important; 
+    color: #fff;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-right: 0.3rem; 
 }
 
 .btn {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none !important;
     border-radius: 1.6rem !important;
-    cursor: pointer !important;
-    width: 8rem !important;
-    height: 2.7rem !important; 
+    cursor: pointer;
+    width: 7.7rem;
+    height: 2.6rem; 
     background-color: #F56E1D !important; 
-    color: #fff !important;
-    font-family: Montserrat !important;
-    font-size: clamp(0.9rem, 2vw, 1.1rem) !important;
-    font-weight: 700 !important;
-    text-align: center !important;
-    padding: 0 !important;
-    line-height: normal !important;
+    color: #fff;
+    font-family: Montserrat;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+    font-weight: 700;
+    text-align: center;
+    padding: 0;
+    line-height: normal;
 }
 
 .btn:hover {
-    box-shadow: 0px 0px 3px 3px #F56E1D !important; 
-    background-color: #F56E1D !important; 
-    color: #fff !important;
-    text-decoration: none !important;
+    box-shadow: 0px 0px 3px 3px #F56E1D; 
+    background-color: #F56E1D; 
+    color: #fff;
+    text-decoration: none;
 }
 
 .girocrew {
     width: 100%;
     min-height: 44rem;
-    background-image: url('../img/girocrew.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;  
     color: #fff;
     text-shadow: 1px 1px 8px #000;
     margin: 0;
     position: relative;
     font-family: Montserrat;
+    overflow: hidden;
+    --scroll-blur: 0px;
 }
+
+.girocrew::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../img/girocrew.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    z-index: -1;
+    filter: blur(var(--scroll-blur));
+}
+
 
 .girocrew h2 {
     font-size: clamp(1.8rem, 3vw, 2rem);
     margin: 0 0 1rem 0; 
-    white-space: nowrap;
 }
 
 .girocrew span {
     font-size: clamp(1rem, 2.5vw, 1.5rem);
 }
 
-.girocrew-text {
-    text-align: center;
+.girocrew-text-container {
     position: absolute;
     top: 28%;
-    left: 80%;
-    transform: translate(-50%, -50%);
+    right: 4vw;
+    transform: translateY(-50%);
+    width: fit-content;
+}
+
+.girocrew-text {
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center; 
-    width: fit-content;
 }
 
 .girocrew-text span {
@@ -109,42 +128,43 @@
 }
 
 .girocrew-text button {
-    font-size: clamp(1.1rem, 2.8vw, 1.4rem) !important;
-    font-weight: 400 !important;
-    width: 12rem !important;
-    height: 3rem !important;
-    margin-top: 1.2rem !important;
+    font-size: clamp(1.1rem, 2.8vw, 1.4rem);
+    font-weight: 400;
+    width: 11.6rem;
+    height: 3rem;
+    margin-top: 1.2rem;
 }
 
 .flashcards {
-    font-family: Montserrat !important;
-   
+    font-family: Montserrat;
+    color: #282726;
 }
 
 .flashcards h2 {
-    font-size: clamp(1.8rem, 4vw, 1.8rem) !important;
-    font-weight: 500 !important;
-    text-align: center !important;
-    padding-top: 3rem !important;
+    font-size: clamp(1.4rem, 4vw, 1.8rem);
+    font-weight: 600;
+    text-align: center;
+    padding-top: 3rem;
+    text-shadow: 1px 1px 8px #dadada;
 }
 
 .flashcards span {
-    font-size: clamp(1rem, 2.5vw, 1.4rem) !important;
-    font-weight: 400 !important;
-    text-align: center !important;
+    font-size: clamp(0.8rem, 2.5vw, 1.4rem);
+    font-weight: 400;
+    text-align: center;
     margin-top: 1.4rem; 
-    display: block;   
+    display: block;
+    text-shadow:1px 1px 8px #dadada;
 }
 
 .blocklist {
     text-align: center;
     display: flex;
-    gap: 4.4rem; 
+    gap: 10rem; 
     list-style: none;
     padding: 0;
-    justify-content: space-around; 
-    align-items: flex-start;
-    width: 100%;
+    justify-content: center; 
+    align-items: center;
     margin-top: 4rem;
 }
 
@@ -152,21 +172,29 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-    padding: 16px 24px;
-    border-radius: 8px;
-    width: 500px;
+    padding: 1rem 1.5rem;
+    width: 22rem;
+    height: 20rem;
+    border-radius: 40px;
+    background: #fff;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+    justify-content: center;
+}
+
+.thecard {
+    justify-content: center;
 }
 
 .flashtitle {
-    font-size: clamp(1.2rem, 3vw, 1.5rem);
-    margin-top: 1.4rem;
+    font-size: clamp(1.1rem, 3vw, 1.4rem);
+    margin-top: 1rem;
+    font-weight: 580;
 }
 
 .flashinfo {
     font-size: clamp(0.9rem, 2.2vw, 1.1rem);
     text-align: center; 
-    margin-top: 8px;
-    margin-bottom: 1.4rem;    
+    margin-top: 0.6rem;
     width: 100%;        
 }
 
@@ -195,20 +223,22 @@
     display: flex;
     gap: 7rem; 
     justify-content: center;
-    margin-top: 32px;
+    margin-top: 5rem;
     font-family: Montserrat;
+    align-items: center;
+    padding: 0;
+    color: #282726
 }
 
 .revblock {
     background: #fff;
     padding: 16px 24px;
     border-radius: 40px;
-    width: 390px;
+    width: 25rem;
     height: 11rem;
-    gap: 20rem;
     text-align: center;
     list-style: none;
-
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
 }
 
 a {
@@ -238,7 +268,7 @@ a {
     background-color: #EAEAEA;
     position: relative; 
     z-index: 1; 
-    margin-top: -6.3rem; 
+    margin-top: -6.9rem; 
     padding: 14rem 2rem 4rem 2rem; 
 }
 
@@ -246,18 +276,19 @@ a {
     display:flex;
     list-style: none;
     gap: 1.2rem;
-    font-size: clamp(1rem, 2.2vw, 1.3rem);
+    font-size: clamp(0.9rem, 2.2vw, 1.2rem);
     color: #4E4E4E;
 }
 
 iframe {
-    width: 26rem;
-    height: 26rem;
+    width: 22rem;
+    height: 22rem;
+    margin-right: 1.3rem;
 }
 
 .moreinfo h3 {
-    font-size: clamp(1.8rem, 4vw, 2rem);
     margin-bottom: 3rem;
+    margin-top: 2rem;
     text-align: center;
 }
 
@@ -267,19 +298,100 @@ iframe {
 
 .mrc {
     margin-bottom: 3rem;
+    margin-right: 2.5rem;
 }
 
 .locmore {
     list-style: none;
     display: flex;
     align-items: center;
+    margin-right: 1rem;
 }
 
 .tswift {
-    margin-left: 2rem;
-    font-size: clamp(1rem, 2.2vw, 1.3rem);
+    margin-left: 1rem;
+    font-size: clamp(0.9rem, 2.2vw, 1.2rem);
 }
 
 #toknow {
-    margin-bottom: 5.25rem;
+    margin-bottom: 4.4rem;
+}
+
+.mlink:hover {  
+    color: #F56E1D;
+}
+
+.loc {
+    border-radius: 40px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+    height: 32rem;
+    width: 44rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.loc h3 {
+    font-size: clamp(1.2rem, 4vw, 1.6rem);
+    margin-bottom: 2rem;
+    width: 100%; 
+    padding-bottom: 1.5rem;
+    border-bottom: 0.12rem solid #dad7d7;
+}
+
+.redes h3 {
+    font-size: clamp(1.2rem, 4vw, 1.6rem);
+    margin-bottom: 2rem;
+    width: 100%;
+    padding-bottom: 1.5rem;
+    border-bottom: 0.12rem solid #dad7d7;
+}
+
+.redes {
+    border-radius: 40px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+    height: 32rem;
+    width: 23rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width: 1400px) {
+    .blocklist,
+    .reviews,
+    .moreinfo {
+        flex-direction: column;
+        align-items: center;
+        gap: 3rem; 
+    }
+
+    .reviews,
+    .moreinfo {
+    padding-top: 8rem;
+    margin-top: -6.9rem;
+    }
+
+    .blocklist li,
+    .revblock,
+    .loc,
+    .redes {
+        width: 90%;   
+        max-width: 56rem; 
+        height: auto; 
+    }
+
+    .locmore {
+        flex-direction: column; 
+        gap: 2rem;
+    }
+
+    iframe {
+        width: 100%; 
+        height: 20rem;
+    }
+
+    .tswift {
+        margin-left: 0; 
+    }
 }
